part1/project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  strategy: {}
  template:
    metadata:
      labels:
        app: project
    spec:
      containers:
      - image: melxi/project:0.3
        name: project
