part1/project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: ClusterIP
  selector:
    app: project
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 3000
